Fixed placeholder spacing, made inputs round

--- a/style.css
+++ b/style.css
@@ -5,9 +5,15 @@
   }
   
   body {
-    /* background-color: #243344; */
+    background-color: #3a3f45;
+    color: lightblue;
     height: 100vh;
     width: 100vw;
+  }
+
+  a {
+    color: lightcyan;
+    font-weight: bold;
   }
   
   .container {
@@ -17,7 +23,14 @@
     width: 100%;
     height: 100%;
   }
+
+  .textBox {
+    border-radius: 1rem;
+    width: 100%
+  }
+
   
+
   form {
     height: 70%;
     width: 75%;
@@ -28,6 +41,16 @@
     align-items: center;
     justify-content: space-around;
     /* gap: 1rem; */
+  }
+
+  ::placeholder {
+    font-style: italic;
+    font-size: 1em;
+  }
+
+  :placeholder-shown  {
+    position: relative;
+    padding-left: 1rem;
   }
   
   header {
